--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@apollo/server": "^5.0.0",
     "@as-integrations/express4": "^1.1.2",
     "@types/express": "^4.17.23",
+    "apollo-server-errors": "^3.3.1",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
